tests/baselines/reference/parserComputedPropertyName12.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName12.ts(2,5): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName12.ts (1 errors) ====
    class C {
       [e]() { }
        ~
!!! error TS2304: Cannot find name 'e'.
    }